[tool.poetry]
name = "lox"
version = "0.1.0"
description = ""
authors = ["Drew Thomas <cdthomas.92@gmail.com>"]
license = "MIT"
packages = [
    {include = "lox", from = "python"},
    {include = "tooling"}
]

[tool.poetry.dependencies]
python = "^3.9"
lark-parser = "^0.11.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.6b0"

[tool.poetry.scripts]
lox = "lox.cli:main"
test = "tooling.test_runner.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
